@@ -50,6 +50,7 @@ Aktuell werden folgende Auflistungen unterstützt:
 - ``tasks``: Aufgaben
 - ``todos``: Teamraum ToDos
 - ``proposals``: Anträge
+- ``contacts``: Lokale Kontakte
 
 
 Für jede Auflistung können verschiedene Felder (Parameter ``columns``) abgefragt
@@ -100,6 +101,10 @@ werden. Folgende Felder stehen zur Verfügung:
 - ``type``: Inhaltstyp
 - ``@type``: Inhaltstyp
 - ``UID``: UID des Objektes
+- ``firstname``: Vorname
+- ``lastname``: Nachname
+- ``email``: E-Mail Adresse
+- ``phone_office``: Telefonnummer
 
 Je nach Auflistungstyp und Inhalt sind bestimmte Felder nicht verfügbar. In diesem
 Fall wird der Wert ``none`` zurückgegeben. So haben Dossiers bspw. keinen Dateinamen,
@@ -108,98 +113,97 @@ siehe Tabelle:
 
 .. table::
 
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    | Feld                     | Document | Dossier | Arbeitsraume | Arbeitsraum Ordner | Aufgabe |  ToDo   | Anträge |
-    +==========================+==========+=========+==============+====================+=========+=========+=========+
-    |``bumblebee_checksum``    |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``changed``               |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``checked_out``           |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``checked_out_fullname``  |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``completed``             |   nein   |   nein  |     nein     |        nein        |   ja    |   ja    |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``containing_dossier``    |    ja    |    ja   |     nein     |        nein        |   ja    |  nein   |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``containing_subdossier`` |    ja    |    ja   |     nein     |        nein        |   ja    |  nein   |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``created``               |    ja    |    ja   |      ja      |         ja         |   ja    |   ja    |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``creator``               |    ja    |    ja   |      ja      |         ja         |   ja    |   ja    |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``deadline``              |   nein   |   nein  |     nein     |        nein        |   ja    |   ja    |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``delivery_date``         |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``description``           |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``document_author``       |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``document_date``         |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``document_type``         |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``end``                   |   nein   |    ja   |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``file_extension``        |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``filename``              |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``filesize``              |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``has_sametype_children`` |   nein   |    ja   |      ja      |         ja         |   ja    |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``issuer_fullname``       |   nein   |   nein  |     nein     |        nein        |   ja    |  nein   |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``is_subdossier``         |   nein   |    ja   |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``is_subtask``            |   nein   |   nein  |     nein     |        nein        |   ja    |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``keywords``              |    ja    |    ja   |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``mimetype``              |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``modified``              |    ja    |    ja   |      ja      |         ja         |   ja    |   ja    |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``pdf_url``               |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``preview_url``           |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``receipt_date``          |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``reference``             |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``reference_number``      |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``relative_path``         |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``responsible``           |   nein   |    ja   |     nein     |        nein        |   ja    |   ja    |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``responsible_fullname``  |   nein   |    ja   |     nein     |        nein        |   ja    |   ja    |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``review_state``          |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``review_state_label``    |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``sequence_number``       |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``start``                 |   nein   |    ja   |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``task_type``             |   nein   |   nein  |     nein     |        nein        |   ja    |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``thumbnail_url``         |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``title``                 |    ja    |    ja   |      ja      |         ja         |   ja    |   ja    |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``type``                  |    ja    |    ja   |      ja      |         ja         |   ja    |   ja    |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``@type``                 |    ja    |    ja   |      ja      |         ja         |   ja    |   ja    |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-    |``UID``                   |    ja    |    ja   |      ja      |         ja         |   ja    |   ja    |   ja    |
-    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+
-
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    | Feld                     | Document | Dossier | Arbeitsraume | Arbeitsraum Ordner | Aufgabe |  ToDo   | Anträge | Kontakte |
+    +==========================+==========+=========+==============+====================+=========+=========+=========+==========+
+    |``bumblebee_checksum``    |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``changed``               |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |    ja    |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``checked_out``           |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``checked_out_fullname``  |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``completed``             |   nein   |   nein  |     nein     |        nein        |   ja    |   ja    |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``containing_dossier``    |    ja    |    ja   |     nein     |        nein        |   ja    |  nein   |   ja    |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``containing_subdossier`` |    ja    |    ja   |     nein     |        nein        |   ja    |  nein   |   ja    |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``created``               |    ja    |    ja   |      ja      |         ja         |   ja    |   ja    |   ja    |    ja    |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``creator``               |    ja    |    ja   |      ja      |         ja         |   ja    |   ja    |   ja    |    ja    |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``deadline``              |   nein   |   nein  |     nein     |        nein        |   ja    |   ja    |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``delivery_date``         |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``description``           |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |    ja    |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``document_author``       |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``document_date``         |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``document_type``         |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``end``                   |   nein   |    ja   |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``file_extension``        |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``filename``              |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``filesize``              |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``has_sametype_children`` |   nein   |    ja   |      ja      |         ja         |   ja    |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``issuer_fullname``       |   nein   |   nein  |     nein     |        nein        |   ja    |  nein   |   ja    |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``is_subdossier``         |   nein   |    ja   |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``is_subtask``            |   nein   |   nein  |     nein     |        nein        |   ja    |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``keywords``              |    ja    |    ja   |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``mimetype``              |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``modified``              |    ja    |    ja   |      ja      |         ja         |   ja    |   ja    |   ja    |    ja    |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``pdf_url``               |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``preview_url``           |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``receipt_date``          |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``reference``             |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``reference_number``      |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``relative_path``         |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |    ja    |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``responsible``           |   nein   |    ja   |     nein     |        nein        |   ja    |   ja    |   ja    |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``responsible_fullname``  |   nein   |    ja   |     nein     |        nein        |   ja    |   ja    |   ja    |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``review_state``          |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``review_state_label``    |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``sequence_number``       |    ja    |    ja   |      ja      |         ja         |   ja    |  nein   |   ja    |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``start``                 |   nein   |    ja   |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``task_type``             |   nein   |   nein  |     nein     |        nein        |   ja    |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``thumbnail_url``         |    ja    |   nein  |     nein     |        nein        |  nein   |  nein   |  nein   |   nein   |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``title``                 |    ja    |    ja   |      ja      |         ja         |   ja    |   ja    |   ja    |    ja    |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``type``                  |    ja    |    ja   |      ja      |         ja         |   ja    |   ja    |   ja    |    ja    |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``@type``                 |    ja    |    ja   |      ja      |         ja         |   ja    |   ja    |   ja    |    ja    |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
+    |``UID``                   |    ja    |    ja   |      ja      |         ja         |   ja    |   ja    |   ja    |    ja    |
+    +--------------------------+----------+---------+--------------+--------------------+---------+---------+---------+----------+
 
 
 Optionale Parameter:
